k8s/envoy/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: doppelganger
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/example-endpoint"
                    route:
                      cluster: example_service_v1
                      request_mirror_policies:
                      - cluster: example_service_v2
                        runtime_fraction:
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                  - match:
                      prefix: "/v1"
                    route:
                      prefix_rewrite: "/example-endpoint"
                      cluster: example_service_v1
                  - match:
                      prefix: "/v2"
                    route:
                      prefix_rewrite: "/example-endpoint"
                      cluster: example_service_v2
      clusters:
      - name: example_service_v1
        connect_timeout: 30s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: example_service_v1
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: example-service-v1.doppelganger.svc.cluster.local
                    port_value: 80
      - name: example_service_v2
        connect_timeout: 30s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        load_assignment:
          cluster_name: example_service_v2
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: example-service-v2.doppelganger.svc.cluster.local
                    port_value: 80
